--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,31 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.5'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.5.0'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
-ext {
-    set('springCloudVersion', "2023.0.1") // ✅ Leyton 안정 버전 (Spring Boot 3.2.x용)
+group = 'com.pieceofcake'
+version = '0.0.1-SNAPSHOT'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.spring.io/milestone' }
+}
+
+ext {
+    set('springCloudVersion', "2025.0.0-RC1")
 }
 
 dependencies {
@@ -18,18 +34,15 @@ dependencies {
     //eureka
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
-    //batch
-    implementation 'org.springframework.boot:spring-boot-starter-batch'
-
-    //jpa
+    // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 
     //kafka
     implementation 'org.springframework.kafka:spring-kafka'
-
-    //lombok
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -37,11 +50,13 @@ dependencies {
     //feign-client
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
-    runtimeOnly 'com.mysql:mysql-connector-j'
+    //batch
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
 
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.mysql:mysql-connector-j'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.batch:spring-batch-test'
-    testImplementation 'org.springframework.kafka:spring-kafka-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
@@ -49,4 +64,8 @@ dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
 }
