--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
+    maven { url = uri("https://repo.spring.io/milestone") }
 }
 
 ext {
@@ -52,6 +52,9 @@ dependencies {
 
     //batch
     implementation 'org.springframework.boot:spring-boot-starter-batch'
+
+    //jackson
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
